Added floating button to fragments.
Outcome and Income fragments now have a floating button to register a transaction.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="balance">Balance</string>
     <string name="income">Income</string>
     <string name="outcome">Outcome</string>
+    <string name="income_button">Button to add an income</string>
+    <string name="outcome_button">Button to add an outcome</string>
 </resources>
